# ChangeLog for net-nntp/sabnzbd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sabnzbd-0.7.18 (11 Jul 2014)

  11 Jul 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
  +sabnzbd-0.7.18.ebuild:
  Version bump. (Sorry for delay. Vacation time)

*sabnzbd-0.7.17 (25 Mar 2014)

  25 Mar 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
  -sabnzbd-0.7.11.ebuild, -sabnzbd-0.7.12.ebuild, -sabnzbd-0.7.13.ebuild,
  -sabnzbd-0.7.14.ebuild, +sabnzbd-0.7.17.ebuild:
  Version bump. Old ebuilds cleanup.

*sabnzbd-0.7.16 (02 Sep 2013)

  02 Sep 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.16.ebuild:
  Version bump.

*sabnzbd-0.7.14 (08 Jul 2013)

  08 Jul 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.14.ebuild:
  Version bump.

*sabnzbd-0.7.13 (14 Jun 2013)

  14 Jun 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.13.ebuild:
  Version Bump.

*sabnzbd-0.7.12 (23 May 2013)

  23 May 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.12.ebuild:
  Version bump.

*sabnzbd-0.7.11 (09 Feb 2013)

  09 Feb 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.10.ebuild, +sabnzbd-0.7.11.ebuild:
  Version bump.

*sabnzbd-0.7.10 (01 Feb 2013)

  01 Feb 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.9.ebuild, +sabnzbd-0.7.10.ebuild:
  Version bump.

*sabnzbd-0.7.9 (07 Jan 2013)

  07 Jan 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.8.ebuild, +sabnzbd-0.7.9.ebuild:
  Version bump.

*sabnzbd-0.7.8 (04 Jan 2013)

  04 Jan 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.7.ebuild, +sabnzbd-0.7.8.ebuild:
  Version bump.

*sabnzbd-0.7.7 (15 Dec 2012)

  15 Dec 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.6.ebuild, +sabnzbd-0.7.7.ebuild:
  Version bump.

*sabnzbd-0.7.6 (17 Nov 2012)

  17 Nov 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>